--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "ng serve",
     "build": "ng build",
-    "electron": "ng build && electron ."
+    "electron": "ng build && electron .",
+    "electron:build": "ng build && electron-builder --win"
   },
   "private": true,
   "dependencies": {
@@ -19,7 +20,6 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.3",
-    "electron": "^27.1.2",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -32,6 +32,8 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "electron": "^27.1.2",
+    "electron-builder": "^24.6.4",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -39,5 +41,23 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.2.2"
+  },
+  "build": {
+    "appId": "net.weg.angular-electron-integration",
+    "productName": "Integração Angular e Electron",
+    "artifactName": "angular-electron-integration-${version}.${ext}",
+    "win": {
+      "target": "nsis",
+      "icon": "./src/favicon.png"
+    },
+    "directories": {
+      "output": "electron-dist"
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "wegneto",
+      "repo": "angular-electron-integration",
+      "releaseType": "draft"
+    }
   }
 }
